Added the link to Github repository

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <h1>World Clock</h1>
     <footer>
       This project was coded by Evelyn Lima and is
-      <a href="a" target="_blank"> open sourced on Github </a>
+      <a
+        href="https://github.com/Evelyn-DeLima/world-clock-time-zone"
+        target="_blank"
+      >
+        open sourced on Github
+      </a>
     </footer>
     <script src="src/index.js"></script>
   </body>
