--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <title>World Clock - by Evelyn Lima</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">select a city...</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Barcelona</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">May 27th 2024</div>
+        <div class="time">12:46:19 AM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">May 27th 2024</div>
+        <div class="time">12:46:19 AM</div>
+      </div>
+    </div>
+
     <footer>
       This project was coded by Evelyn Lima and is
       <a
