--- a/index.html
+++ b/index.html
@@ -11,25 +11,30 @@
       <h1>World Clock</h1>
 
       <select>
-        <option value="">select a city...</option>
+        <option value="">Select a city..</option>
         <option value="">London</option>
         <option value="">New York</option>
-        <option value="">Barcelona</option>
+        <option value="">Auckland</option>
       </select>
+
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">May 27th 2024</div>
-        <div class="time">12:46:19 AM</div>
+        <div>
+          <h2>Los Angeles </h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">May 27th 2024</div>
-        <div class="time">12:46:19 AM</div>
+        <div>
+          <h2>Barcelona </h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
       </div>
     </div>
 
     <footer>
-      This project was coded by Evelyn Lima and is
+      This project was coded by <strong>Evelyn Lima </strong> and is
       <a
         href="https://github.com/Evelyn-DeLima/world-clock-time-zone"
         target="_blank"
