--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="container">
       <h1>World Clock</h1>
 
-      <select>
+      <select id="city">
         <option value="">Select a city..</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Auckland</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_york">New York</option>
+        <option value="Pacific/Auckland">Auckland</option>
       </select>
-
+      <div id="cities"></div>
       <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles</h2>
@@ -33,6 +33,7 @@
         </div>
         <div class="time"></div>
       </div>
+    </div>
     </div>
 
     <footer>
