--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
         <option value="America/New_york">New York</option>
         <option value="Pacific/Auckland">Auckland</option>
       </select>
-      <div id="cities"></div>
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="barcelona">
-        <div>
-          <h2>Barcelona</h2>
-          <div class="date"></div>
+        <div class="city" id="barcelona">
+          <div>
+            <h2>Barcelona</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
-    </div>
     </div>
 
     <footer>
